# depth_color_alignment_ros

./: CMakeLists.txt  README.md  package.xml
src/: registration.cpp
